--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,7 @@ services:
     container_name: pihole
     image: pihole/pihole:latest
     # For DHCP it is recommended to remove these ports and instead add: network_mode: "host"
-    ports:
-      - "53:53/tcp"
-      - "53:53/udp"
-      - "67:67/udp" # Only required if you are using Pi-hole as your DHCP server
-      - "80:80/tcp"
+    network_mode: "host"
     environment:
       TZ: 'Europe/London'
     # Volumes store your data between container upgrades
